<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".NotesList">
    <item android:id="@+id/action_select"
        android:title="@string/select"
        android:icon="@drawable/select"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_delete"
        android:title="@string/delete_note"
        android:icon="@drawable/delete"
        app:showAsAction="ifRoom"
        android:visible="false" />
    <item android:id="@+id/action_share"
        android:title="@string/share_note"
        android:icon="@drawable/share"
        app:showAsAction="ifRoom"
        android:visible="false" />
    <item android:id="@+id/action_about"
        android:title="@string/about"/>
</menu>
